Update Portuguese translations

--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -6,18 +6,19 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: nala 0.10.0\n"
+"Project-Id-Version: nala 0.11.1\n"
 "Report-Msgid-Bugs-To: https://gitlab.com/volian/nala/-/issues\n"
 "POT-Creation-Date: 2022-11-22 00:13-0600\n"
-"PO-Revision-Date: 2022-08-09 14:48+0100\n"
+"PO-Revision-Date: 2022-12-30 17:23+0000\n"
 "Last-Translator: Hugo Carvalho <hugokarvalho@hotmail.com>\n"
-"Language: pt_PT\n"
 "Language-Team: \n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: pt_PT\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.2\n"
 
 #. Answers for the Question prompt "[Y/n]"
 #: nala/utils.py:64
@@ -42,7 +43,7 @@ msgstr "{error} falha da compilação regex '{error_msg} na posição {position}
 
 #: nala/utils.py:354
 msgid "{error} Nala needs root to fix broken packages"
-msgstr "{error} O Nala requer o acesso root para corrigir pacotes quebrados"
+msgstr "{error} O Nala requer o acesso root para corrigir pacotes corrompidos"
 
 #: nala/utils.py:359
 msgid "{error} Nala needs root to {command}"
@@ -66,7 +67,7 @@ msgstr "{error} não encontra versão para {package}"
 
 #: nala/nala.py:122
 msgid "There are broken packages that need to be fixed!"
-msgstr "Existem pacotes quebrados que precisam de ser corrigidos!"
+msgstr "Existem pacotes corrompidos que precisam de ser corrigidos!"
 
 #: nala/nala.py:124
 msgid "You can use {switch} if you'd like to try without fixing them."
@@ -98,7 +99,7 @@ msgstr "Gostaria que os protegêssemos e que tentássemos novamente?"
 
 #: nala/error.py:581 nala/install.py:232 nala/nala.py:294
 msgid "{error} You have held broken packages"
-msgstr "{error} Manteve pacotes quebrados"
+msgstr "{error} Manteve pacotes corrompidos"
 
 #: nala/nala.py:337
 msgid "Install packages."
@@ -130,7 +131,8 @@ msgstr "Purga automática de pacotes que não são mais necessários."
 
 #: nala/nala.py:419
 msgid "{error} {config} must be used with either {autoremove} or {autopurge}."
-msgstr "{error} {config} deve ser utilizado apenas com {autoremove} ou {autopurge}"
+msgstr ""
+"{error} {config} deve ser utilizado apenas com {autoremove} ou {autopurge}"
 
 #: nala/nala.py:434
 msgid "Show package details."
@@ -210,11 +212,14 @@ msgstr "A purgar ficheiros de configuração para {package}"
 
 #: nala/install.py:206
 msgid "{notice} Selected packages cannot be excluded from upgrade safely."
-msgstr "{notice} Os pacotes selecionados não podem ser excluídos da actualização em segurança."
+msgstr ""
+"{notice} Os pacotes selecionados não podem ser excluídos da actualização em "
+"segurança."
 
 #: nala/install.py:228
 msgid "{error} Unable to calculate how to protect the selected packages"
-msgstr "{error} Não foi possível calcular como proteger os pacotes selecionados"
+msgstr ""
+"{error} Não foi possível calcular como proteger os pacotes selecionados"
 
 #: nala/install.py:234
 msgid "{notice} The following packages need to be protected as well:"
@@ -273,25 +278,31 @@ msgid ""
 "{error} No content length in response from {url}\n"
 "  Ensure the URL points to a Debian Package"
 msgstr ""
+"{error} Nenhum comprimento de conteúdo em resposta de {url}\n"
+"  Assegurar que o URL aponta para um pacote Debian"
 
 #: nala/install.py:650
 msgid ""
-"{error} It is not secure to download a package without a hashsum verification.\n"
-"  If you are sure you do NOT want verification, use '-o APT::Get::AllowUnauthenticated=true'"
+"{error} It is not secure to download a package without a hashsum "
+"verification.\n"
+"  If you are sure you do NOT want verification, use '-o APT::Get::"
+"AllowUnauthenticated=true'"
 msgstr ""
+"{error} Não é seguro transferir um pacote sem uma verificação hashsum.\n"
+"  Se tem a certeza que NÃO quer verificação, usar '-o APT::Get::"
+"AllowUnauthenticated=true'"
 
 #: nala/install.py:696
 msgid "{error} Hash does not match the '{hash_type}' Length"
-msgstr ""
+msgstr "{error} O hash não corresponde ao comprimento '{hash_type}'"
 
 #: nala/install.py:703
 msgid "{error} Hash Type '{hash_type}' specified with no hash"
-msgstr ""
+msgstr "{error} Tipo de hash '{hash_type}' especificado sem hash"
 
 #: nala/install.py:710
-#, fuzzy
 msgid "{error} Hash Type '{hash_type}' is unsupported"
-msgstr "{error} {distro} {release} não tem suporte."
+msgstr "{error} Tipo de hash '{hash_type}' não é suportado"
 
 #: nala/install.py:856
 msgid "{error} Version {version} not found for package {package}"
@@ -318,8 +329,11 @@ msgid "Notices:"
 msgstr "Avisos:"
 
 #: nala/install.py:1097
-msgid "{error} It can be dangerous to continue without a terminal. Use `--assume-yes`"
-msgstr "{error} Pode ser perigoso continuar sem um terminal. Usar `--assume-yes`"
+msgid ""
+"{error} It can be dangerous to continue without a terminal. Use `--assume-"
+"yes`"
+msgstr ""
+"{error} Pode ser perigoso continuar sem um terminal. Usar `--assume-yes`"
 
 #: nala/install.py:1104
 msgid "{warning} Using {switch} can be very dangerous!"
@@ -371,7 +385,8 @@ msgstr "Versão não candidata"
 
 #: nala/cache.py:131
 msgid "{error} unable to find any packages by globbing {pkg}"
-msgstr "{error} não foi possível encontrar nenhum pacote utilizando globbing em {pkg}"
+msgstr ""
+"{error} não foi possível encontrar nenhum pacote utilizando globbing em {pkg}"
 
 #: nala/cache.py:195
 msgid "{warn} Virtual Packages like {package} can't be removed."
@@ -387,7 +402,8 @@ msgstr "A proteger {package} da remoção automática"
 
 #: nala/cache.py:264
 msgid "{total} packages can be upgraded. Run '{command}' to see them."
-msgstr "{total} pacotes podem ser atualizados. Executar \"{command}\" para vê-los."
+msgstr ""
+"{total} pacotes podem ser atualizados. Executar \"{command}\" para vê-los."
 
 #: nala/cache.py:300
 msgid "{package} is a virtual package provided by:"
@@ -434,12 +450,19 @@ msgid "{dependency} conflicts with {package} {version}"
 msgstr "{dependency} em conflito com {package} {version}"
 
 #: nala/error.py:60
-msgid "{error} python-apt gave us {apt_err} This isn't a proper error as it's empty"
-msgstr "{error} o python-apt gerou {apt_err} Este não é um erro adequado, pois está vazio"
+msgid ""
+"{error} python-apt gave us {apt_err} This isn't a proper error as it's empty"
+msgstr ""
+"{error} o python-apt gerou {apt_err} Este não é um erro adequado, pois está "
+"vazio"
 
 #: nala/error.py:122
-msgid "{notice} Some index files failed to download. They have been ignored, or old ones used instead."
-msgstr "{notice} Alguns ficheiros de índice não foram transferidos. Foram ignorados, ou em vez disso foram utilizados os antigos."
+msgid ""
+"{notice} Some index files failed to download. They have been ignored, or old "
+"ones used instead."
+msgstr ""
+"{notice} Alguns ficheiros de índice não foram transferidos. Foram ignorados, "
+"ou em vez disso foram utilizados os antigos."
 
 #: nala/error.py:137
 msgid "{error} Installation has failed."
@@ -455,7 +478,7 @@ msgstr "És o root?"
 
 #: nala/error.py:169
 msgid "{error} The following packages are essential!"
-msgstr "{notice} Os seguintes pacotes são essenciais!"
+msgstr "{error} Os seguintes pacotes são essenciais!"
 
 #: nala/error.py:174
 msgid "{error} You have attempted to remove essential packages"
@@ -471,7 +494,7 @@ msgstr "{error} {package} não tem candidato à instalação."
 
 #: nala/error.py:197 nala/show.py:331
 msgid "{error} {package} not found"
-msgstr "{error} {regex} não encontrado"
+msgstr "{error} {package} não encontrado"
 
 #: nala/error.py:231
 msgid ""
@@ -510,7 +533,6 @@ msgid "{package} but the cache version is {version}"
 msgstr "{package} mas a versão em cache é {version}"
 
 #: nala/error.py:405
-#, fuzzy
 msgid "{package} but it cannot be installed"
 msgstr "{package} mas não pode ser instalado"
 
@@ -609,11 +631,11 @@ msgstr "Sugerido, não será instalado"
 
 #: nala/summary.py:249 nala/summary.py:267
 msgid "Kept Back, Will Not Be Upgraded"
-msgstr ""
+msgstr "Mantidos, não serão actualizados"
 
 #: nala/summary.py:249 nala/summary.py:267
 msgid "Kept Back"
-msgstr ""
+msgstr "Mantidos"
 
 #: nala/summary.py:251
 msgid "Auto-Removable, Will Not Be Removed"
@@ -663,9 +685,9 @@ msgid "Are these mirrors okay?"
 msgstr "Estes espelhos estão bem?"
 
 #: nala/fetch.py:303
-#, fuzzy
 msgid "Mirrors you want to keep, separated by space or comma {selection}:"
-msgstr "Espelhos que deseja manter separados por espaços {selection}:"
+msgstr ""
+"Espelhos que deseja manter, separados por espaço ou vírgula {selection}:"
 
 #: nala/fetch.py:325
 msgid "{error} Index {index} doesn't exist."
@@ -673,11 +695,11 @@ msgstr "{error} Index {index} não existe."
 
 #: nala/fetch.py:335
 msgid "{error} {value_error}"
-msgstr ""
+msgstr "{error} {value_error}"
 
 #: nala/fetch.py:345
 msgid "{error} Parser: {parser}"
-msgstr ""
+msgstr "{error} Analisador: {parser}"
 
 #: nala/fetch.py:376
 msgid "Fetching {distro} mirrors"
@@ -697,7 +719,9 @@ msgstr "A analisar lista de espelhos"
 
 #: nala/fetch.py:660
 msgid "Score is how many milliseconds it takes to download the Release file"
-msgstr "A pontuação é quantos milissegundos são necessários para transferir o ficheiro Release"
+msgstr ""
+"A pontuação é quantos milissegundos são necessários para transferir o "
+"ficheiro Release"
 
 #: nala/fetch.py:733
 msgid "{notice} Nala was unable to fetch {num} mirrors."
@@ -761,7 +785,9 @@ msgstr "Adicionar repositórios contrib e non-free."
 
 #: nala/fetch.py:838
 msgid "Run fetch uninteractively. Will still prompt for overwrite."
-msgstr "Executar o fetch de forma não interativa. Ainda irá solicitar para gravar por cima."
+msgstr ""
+"Executar o fetch de forma não interativa. Ainda irá solicitar para gravar "
+"por cima."
 
 #: nala/fetch.py:847
 msgid "Choose only mirrors of a specific ISO country code."
@@ -769,7 +795,7 @@ msgstr "Escolha apenas espelhos de um código de país ISO específico."
 
 #: nala/fetch.py:876
 msgid "{error} Nala was unable to find any mirrors."
-msgstr "{erro} O Nala não conseguiu encontrar quaisquer espelhos."
+msgstr "{error} O Nala não conseguiu encontrar quaisquer espelhos."
 
 #. This is for `nala show`
 #. header info looks like "Package: steam:i386"
@@ -886,8 +912,12 @@ msgid "local install"
 msgstr "instalado localmente"
 
 #: nala/show.py:309
-msgid "{notice} There are {num} additional records. Please use the {switch} switch to see them."
-msgstr "{notice} Existem {num} registos adicionais. Usar o comutador {switch} para vê-los."
+msgid ""
+"{notice} There are {num} additional records. Please use the {switch} switch "
+"to see them."
+msgstr ""
+"{notice} Existem {num} registos adicionais. Usar o comutador {switch} para "
+"vê-los."
 
 #: nala/show.py:325
 msgid "{error} {package} has no version to show"
@@ -940,7 +970,9 @@ msgstr "Sem descrição"
 
 #: nala/options.py:59
 msgid "{notice} Unable to read config file: {filename}. Using defaults"
-msgstr "{notice} Incapaz de ler o ficheiro de configuração: {filename}. A usar a predefinição"
+msgstr ""
+"{notice} Incapaz de ler o ficheiro de configuração: {filename}. A usar a "
+"predefinição"
 
 #: nala/options.py:72
 msgid "{error} Config key '{key}' should be a bool not {value}"
@@ -994,7 +1026,7 @@ msgstr "Alternar a atualização da lista de pacotes."
 
 #: nala/options.py:460
 msgid "Toggle a more condensed transaction summary."
-msgstr ""
+msgstr "Alternar um resumo de transação mais condensado."
 
 #: nala/options.py:468
 msgid "Purge any packages that would be removed."
@@ -1014,7 +1046,7 @@ msgstr "Os pacotes apenas são obtidos, não desempacotados ou instalados."
 
 #: nala/options.py:499
 msgid "Toggle fix broken packages."
-msgstr "Corrigir pacotes quebrados."
+msgstr "Corrigir pacotes corrompidos."
 
 #: nala/options.py:508
 msgid "Assume 'yes' or 'no' to all prompts."
@@ -1070,29 +1102,38 @@ msgstr "Remover `nala-sources.list`."
 
 #: nala/options.py:627
 msgid "Run fetch uninteractively. Will still prompt for overwrite"
-msgstr "Executar o fetch de forma não interativa. Ainda irá solicitar para gravar por cima"
+msgstr ""
+"Executar o fetch de forma não interativa. Ainda irá solicitar para gravar "
+"por cima"
 
 #: nala/options.py:636
 msgid "Show this message and exit."
 msgstr "Mostra esta mensagem e sai."
 
 #: nala/history.py:85
-msgid "{error} '{command}' for operations other than install or remove are not currently supported"
-msgstr "{error} '{command}' para operações que não sejam instalar ou remover não são suportadas atualmente"
+msgid ""
+"{error} '{command}' for operations other than install or remove are not "
+"currently supported"
+msgstr ""
+"{error} '{command}' para operações que não sejam instalar ou remover não são "
+"suportadas atualmente"
 
 #: nala/history.py:89
 msgid ""
 "Show transaction history.\n"
 "\n"
-"Running `nala history` with no subcommands prints an overview of all transactions."
+"Running `nala history` with no subcommands prints an overview of all "
+"transactions."
 msgstr ""
 "Mostrar histórico de transações.\n"
 "\n"
-"Executar `nala history` sem sub-comandos mostra uma visão geral de todas as transações."
+"Executar `nala history` sem sub-comandos mostra uma visão geral de todas as "
+"transações."
 
 #: nala/history.py:104
 msgid "{error} History file seems corrupt. You should try removing {file}"
-msgstr "{error} O ficheiro do histórico parece corrompido. Deve tentar remover {file}"
+msgstr ""
+"{error} O ficheiro do histórico parece corrompido. Deve tentar remover {file}"
 
 #: nala/history.py:121 nala/history.py:319 nala/history.py:340
 msgid "{error} No history exists."
@@ -1209,13 +1250,14 @@ msgid "{last_completed} {package}"
 msgstr "{last_completed} {package}"
 
 #: nala/downloader.py:107
-#, fuzzy
 msgid "{notice} Nala has removed {filename}"
-msgstr "{notice} O Nala removeu {filename}, mas irá tentar outro espelho"
+msgstr "{notice} O Nala removeu {filename}"
 
 #: nala/downloader.py:108
 msgid "{error} Failed to move archive file, {str_err}: '{file1}' -> '{file2}'"
-msgstr "{error} Falha ao mover o ficheiro de arquivo, {str_err}: '{file1}' -> '{file2}'"
+msgstr ""
+"{error} Falha ao mover o ficheiro de arquivo, {str_err}: '{file1}' -> "
+"'{file2}'"
 
 #: nala/downloader.py:111
 msgid "{error} {filename} does not exist!"
@@ -1239,13 +1281,17 @@ msgid ""
 msgstr ""
 "{error} O ficheiro tem um tamanho inesperado: {filename}\n"
 "  Tamanho esperado: {expected}\n"
-"  Tamanho recebido: {recieved}"
+"  Tamanho recebido: {received}"
 
 #: nala/downloader.py:230
 msgid ""
 "{error} Improper Hash Syntax\n"
-"  Try '{url}:sha256:510b0c4f8fc3e7bd7182b53c0b81c1a113bea9fd3c18219eac0e18e601dc8d17'"
+"  Try '{url}:"
+"sha256:510b0c4f8fc3e7bd7182b53c0b81c1a113bea9fd3c18219eac0e18e601dc8d17'"
 msgstr ""
+"{error} Sintaxe de hash imprópria\n"
+"  Experimente '{url}:"
+"sha256:510b0c4f8fc3e7bd7182b53c0b81c1a113bea9fd3c18219eac0e18e601dc8d17'"
 
 #: nala/downloader.py:296
 msgid "Exiting due to {signal}"
@@ -1268,9 +1314,8 @@ msgid "{error} No more mirrors available for {filename}"
 msgstr "{error} Não existem mais espelhos disponíveis para {filename}"
 
 #: nala/downloader.py:513
-#, fuzzy
 msgid "{notice} Trying next url: {url}"
-msgstr "A tentar o próximo url: {url}"
+msgstr "{notice} A tentar o próximo url: {url}"
 
 #: nala/downloader.py:522
 msgid "{warning} The following packages cannot be authenticated!"
@@ -1281,8 +1326,12 @@ msgid "{error} Some packages were unable to be authenticated"
 msgstr "{error} Alguns pacotes não puderam ser autenticados"
 
 #: nala/downloader.py:534
-msgid "{notice} Configuration is set to allow installation of unauthenticated packages."
-msgstr "{notice} A configuração está definida para permitir a instalação de pacotes não autenticados."
+msgid ""
+"{notice} Configuration is set to allow installation of unauthenticated "
+"packages."
+msgstr ""
+"{notice} A configuração está definida para permitir a instalação de pacotes "
+"não autenticados."
 
 #: nala/downloader.py:544
 msgid "{error} {url} timed out"
@@ -1318,7 +1367,8 @@ msgstr "No modo de transferência apenas. Não voltar para o apt_pkg."
 
 #: nala/downloader.py:870
 msgid "{warning} Falling back to apt_pkg. The following downloads failed:"
-msgstr "{warning} A voltar para o apt_pkg. As seguintes transferências falharam:"
+msgstr ""
+"{warning} A voltar para o apt_pkg. As seguintes transferências falharam:"
 
 #: nala/__main__.py:44
 msgid "Exiting at your request."
@@ -1465,7 +1515,7 @@ msgstr "A obter pacotes em falta"
 
 #: nala/dpkg.py:965
 msgid "Fixing Broken Packages"
-msgstr "A corrigir pacotes quebrados"
+msgstr "A corrigir pacotes corrompidos"
 
 #: nala/dpkg.py:966
 msgid "Updating Package List"
@@ -1499,4 +1549,3 @@ msgstr "Ctrl+C duas vezes rapidamente irá sair"
 
 #~ msgid "Not a valid choice kiddo"
 #~ msgstr "Não é uma escolha válida"
-
